# fastlyzer

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: snapcraft_edge.yml  snapcraft_stable.yml
snap/: snapcraft.yaml
src/: commands.rs  entry.rs  errors.rs  lib.rs  rw.rs
