[package]
name = "fastlyzer"
version = "0.1.0"
authors = ["Shirvan Salehipoor <shirvan@edlio.com>"]
edition = "2018"

[dependencies]
rayon = "1.2.0"
failure = "0.1.5"
structopt = "0.3.0"
tabwriter = "1.1.0"
regex = "1.3.1"
jemallocator-global = "0.3.0"

[lib]
name = "fastlyzer"
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "fastlyzer"
path = "src/bin/fastlyzer.rs"
doctest = false
test = false
