[package]
name = "fastlyzer"
version = "0.2.0"
authors = ["Shirvan Salehipoor <shirvan.sa@gmail.com>", "Matt Freitas-Stavola <matt@edlio.com>"]
edition = "2018"
description = "A fast JSON log analyzer."
homepage = "https://github.com/shirvan/fastlyzer"
repository = "https://github.com/shirvan/fastlyzer"
readme = "README.md"
license = "Unlicense/MIT"
keywords = ["logs", "analyzer", "fast"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false

[dependencies]
rayon = "1.2.0"
failure = "0.1.5"
structopt = "0.3.0"
tabwriter = "1.1.0"
regex = "1.3.1"
jemallocator-global = "0.3.0"
concat-reader = "0.1.0"

[lib]
name = "fastlyzer"
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "fastlyzer"
path = "src/bin/fastlyzer.rs"
doctest = false
test = false
